Fixes bug w/ visibleMenu find()

--- a/assets/styles/documentation/reference.less
+++ b/assets/styles/documentation/reference.less
@@ -194,7 +194,7 @@
       }
 
       >li {
-        font-weight: 400;
+        font-weight: 600;
         color: @headerGray;
         span {
           cursor: pointer;
@@ -204,8 +204,9 @@
           }
         }
         >ul >li {
-          font-weight: 600;
-          color: @black;
+          font-weight: 400;
+          color: @headerGray;
+          // color: @black;
         }
       }
     }
